# data-analysis

./: .gitattributes  .gitignore  MANIFEST.in  README.md  example_notebook.ipynb  pyproject.toml  setup.py  todo.md  todo.py
.github/workflows/: ci.yml
assets/: fake_data.py
docs/: DEVELOPER_GUIDE.md
scripts/: patch_satoshi_fonts.py
shirin/: __init__.py
shirin/assets/: fake_data.py
shirin/plot/: __init__.py  all_plots.py
shirin/plot/common/: __init__.py  data_conversion.py  data_filtering.py  label_mapping.py  palette_handling.py  resolve_palette.py  sorting.py  stacked_plots.py
shirin/plot/config/: __init__.py  colors.py  constants.py  formatting.py  matplotlib.py  palettes.py  types.py
shirin/plot/core/: __init__.py  base_plot.py  exporter.py  factory.py  options.py  registration.py  renderer.py  strategies.py
shirin/plot/formatting/: __init__.py  datalabels.py  legend.py  text_contrast.py  ticks.py  xy_label.py
shirin/plot/plots/: __init__.py  accuracy.py  accuracy_plot.py  barplot.py  barplot_x.py  barplot_y.py  countplot.py  countplot_x.py  countplot_x_normalized.py  countplot_y.py  countplot_y_normalized.py  histogram.py  lineplot.py  normalized_countplot.py  pie.py  piechart.py  timeplot.py
shirin/plot/strategies/: figsize.py  ordering.py  palette.py
shirin/sql/: __init__.py  helpers.py
shirin/stats/: __init__.py  descriptive_statistics.py  number_format.py  stats.py
tests/: __init__.py  test_colors.py  test_data_conversion.py  test_integration_text_colors.py  test_number_format.py  test_options_validation.py  test_palette_conversion.py  test_sorting.py  test_stats.py  test_text_contrast.py
to_do/: TO_CLEAN.ipynb  example_notebook copy.ipynb  sql.ipynb
todo/: TO_CLEAN.ipynb  example_notebook copy.ipynb  pie.py  sql.ipynb
(+21 files in other folders)
