[project]
name = "shirin"
version = "2.2.0"
description = "A data analysis toolkit for statistical computing, visualization, and SQL operations"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib",
    "seaborn",
    "numpy",
    "pandas",
    "ipykernel",
    "ibm-db-sa",
    "sqlalchemy",
    "pyarrow",
]

[dependency-groups]
dev = [
    "jupyter",
    "pytest>=8.4.2",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["shirin"]