[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shirin"
version = "2.6.0"
description = "A data analysis toolkit for statistical computing, visualization, and SQL operations"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib",
    "seaborn",
    "numpy",
    "pandas",
    "ipykernel",
    "ibm-db-sa",
    "sqlalchemy",
    "pyarrow",
]

[dependency-groups]
dev = [
    "jupyter",
    "pytest>=8.4.2",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["shirin*"]
exclude = ["tests*", "docs*", "scripts*"]

[tool.setuptools.exclude-package-data]
"*" = ["*.ipynb"]


